--- a/asap-custom-styles.css
+++ b/asap-custom-styles.css
@@ -336,25 +336,42 @@ blockquote {
   top: 0;
   right: 0;
   height: 100%;
-  width: 100%; /* Adjust width of SVG display area */
+  width: 50%; /* Reduced width to not overlap too much */
   background-image: url('https://assets-staging.noviams.com/novi-file-uploads/asap/graphics/asap-hero-pattern.svg');
   background-repeat: no-repeat;
   background-position: right center;
   background-size: contain;
-  z-index: 1; /* Places behind text content */
+  z-index: 1;
 }
 
 .header-ribbon h1 {
-  margin: 100px 0;
-  max-width: 1000px;
+  margin: 100px 0; /* Keep your vertical spacing */
+  max-width: 1110px;
   margin-left: auto;
   margin-right: auto;
   text-align: left;
   color: #fff !important;
   font-family: neulis-neue, poppins, sans-serif !important;
-  font-size: 3.5em !important;
+  font-size: 3.5em;
   position: relative;
   z-index: 2;
+}
+
+h1 novi-content-wrapper {
+margin-right: 35%;
+}
+
+/* Media query for mobile screens */
+@media (max-width: 768px) {
+  .header-ribbon::after {
+    display: none;
+  }
+  
+  .header-ribbon h1 {
+    max-width: 100%;
+    margin: 50px 0; /* Reduced vertical spacing for mobile */
+    font-size: 2.5em !important; /* Smaller font for mobile */
+  }
 }
 
 .header-ribbon h2 {
