--- a/asap-custom-styles.css
+++ b/asap-custom-styles.css
@@ -468,6 +468,11 @@ label {
   --grid-cols-desktop: 3;
 }
 
+.cols-2-3 {
+  --grid-cols-mobile: 2;
+  --grid-cols-desktop: 3;
+}
+
 .cols-2-4 {
   --grid-cols-mobile: 2;
   --grid-cols-desktop: 4;
