--- a/asap-custom-styles.css
+++ b/asap-custom-styles.css
@@ -718,3 +718,20 @@ ol {
 .novi-accordion .panel-body {
   padding: 15px 20px;
 }
+
+
+/* home hero styles */
+#top-featured-carousel {
+  width: 100%;
+
+  .body-content .main-event{ 
+    .background {
+        width: 100% !important;
+        height: 100% !important;
+        min-height: 100% !important;
+        max-height: 100% !important;
+    }
+    .event-info {
+
+  }}
+}
