--- a/asap-custom-styles.css
+++ b/asap-custom-styles.css
@@ -13,19 +13,20 @@
   --input-border: #0D2894;
 }
 
+
 /* Base fonts */
 body {
-  font-family: var(--font-family);
+  font-family: "poppins", Arial, sans-serif;
   font-weight: 500;
   font-style: normal;
   font-size: 20px;
-  color: var(--text-color);
+  color: #333;
   line-height: 1.7;
 }
 
 /* Headings */
 h1, h2, h3, h4, h5 {
-  font-family: "neulis-neue", var(--font-family);
+  font-family: "neulis-neue", "poppins", Arial, sans-serif;
   margin-top: 60px;
   margin-bottom: 20px;
 }
@@ -38,30 +39,30 @@ h1 {
 h2 {
   font-size: 44px;
   font-weight: 700;
-  color: var(--primary-color);
+  color: #1a1c40;
 }
 
 h3 {
   font-size: 40px;
   font-weight: 500;
-  color: var(--primary-color);
+  color: #1a1c40;
 }
 
 h4 {
   font-size: 30px;
   font-weight: 500;
-  color: var(--tertiary-color);
+  color: #00b8c3;
 }
 
 h5 {
   font-size: 26px;
   font-weight: 400;
-  color: var(--secondary-color);
+  color: #ff6c27;
 }
 
 h6 {
-  color: var(--secondary-color);
-  font-family: var(--font-family);
+  color: #ff6c27;
+  font-family: "poppins", Arial, sans-serif;
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
@@ -76,20 +77,20 @@ h6::before {
   display: inline-block;
   width: 60px;
   height: 1px;
-  background-color: var(--secondary-color);
+  background-color: #ff6c27;
   margin-right: 20px;
 }
 
 /* Links */
 a {
-  color: var(--tertiary-color);
+  color: #00b8c3;
   text-decoration: none;
   font-weight: 500;
 }
 
 a:hover {
   text-decoration: underline;
-  color: var(--tertiary-color);
+  color: #00b8c3;
 }
 
 /* Text formatting */
@@ -104,8 +105,8 @@ small {
 code {
   padding: 2px 4px;
   font-size: 90%;
-  color: var(--secondary-color);
-  background-color: #ffeae0; /* No variable defined for this */
+  color: #ff6c27;
+  background-color: #ffeae0;
   border-radius: 4px;
 }
 
@@ -134,13 +135,13 @@ code {
 
 /* Site Search */
 div.c-nav-centered__search > div {
-  color: var(--white-color);
-  background-color: var(--white-color);
-  border: 1px solid var(--primary-color);
+  color: #ffffff;
+  background-color: #ffffff;
+  border: 1px solid #1a1c40;
 }
 
 #search-panel {
-  background: var(--white-color);
+  background: #fff;
 }
 
 #search-panel .form-group input.form-control.search-text {
@@ -167,7 +168,7 @@ div.c-nav-centered__search > div {
 
 /* Footer Styling */
 .c-footer {
-  background-color: var(--primary-color);
+  background-color: #1a1c40;
   padding-top: 64px;
 }
 
@@ -182,7 +183,7 @@ div.c-nav-centered__search > div {
 .c-footer__li--a,
 .c-footer__legal,
 .c-footer__novi-text {
-  color: var(--white-color);
+  color: #ffffff;
 }
 
 .c-footer__logo-wrapper img {
@@ -198,53 +199,53 @@ div.c-nav-centered__search > div {
 .c-hp-about-association__p .btn.btn-primary {
   padding: 15px 30px;
   border-radius: 8px;
-  background-color: var(--primary-color);
-  border: 2px solid var(--primary-color);
+  background-color: #1a1c40;
+  border: 2px solid #1a1c40;
   font-size: 16px;
   transition: all 0.3s ease;
 }
 
 .btn.btn-primary:hover,
 .c-hp-about-association__p .btn.btn-primary:hover {
-  background-color: var(--white-color);
-  color: var(--primary-color);
-  border: 2px solid var(--primary-color);
+  background-color: #fff;
+  color: #1a1c40;
+  border: 2px solid #1a1c40;
 }
 
 .btn.btn-secondary {
   padding: 15px 30px;
   border-radius: 8px;
-  background-color: var(--background-color);
-  color: var(--secondary-color);
+  background-color: #f1f1f1;
+  color: #ff6c27;
   border: none;
   font-size: 16px;
 }
 
 .btn.btn-secondary:hover {
-  background-color: var(--secondary-color);
-  color: var(--white-color);
+  background-color: #ff6c27;
+  color: #fff;
 }
 
 /* About section */
 #about-association .container {
-  background-color: var(--white-color);
+  background-color: #fff;
 }
 
 /* Events section */
 .events.hidden-xs.hidden-sm {
-  background-color: var(--light-gray);
+  background-color: #eff6f5;
   padding: 20px;
 }
 
 .events-nav h2 {
   text-align: left;
-  color: var(--primary-color);
+  color: #1a1c40;
 }
 
 /* Event date styling */
 .c-event-date-stub__wrapper {
   border-radius: 8px;
-  background-color: var(--white-color);
+  background-color: #fff;
   width: 110px;
   height: 110px;
   display: flex;
@@ -256,12 +257,12 @@ div.c-nav-centered__search > div {
 #events .event .date-stub strong,
 .events .event .date-stub,
 .events .event .date-stub strong {
-  color: var(--highlight-orange);
+  color: #ff7840;
 }
 
 #events .event,
 .events .event {
-  border-bottom: 1px solid var(--border-gray);
+  border-bottom: 1px solid #bababa;
   padding-top: 40px;
 }
 
@@ -281,7 +282,7 @@ div.c-nav-centered__search > div {
 }
 
 .c-event-date-stub__event-name {
-  color: var(--dark-blue);
+  color: #000B41;
   font-size: 24px;
   font-weight: 700;
 }
@@ -294,11 +295,11 @@ div.c-nav-centered__search > div {
 
 .c-event-date-stub__time {
   margin-right: 5px;
-  background-color: var(--white-color);
+  background-color: white;
   border-radius: 8px;
   padding: 4px 8px;
   display: inline-block;
-  color: var(--secondary-color);
+  color: #ff6c27;
   font-size: 16px;
   font-weight: 400;
   line-height: 1;
@@ -315,16 +316,16 @@ div.c-nav-centered__search > div {
 blockquote {
   margin: 40px 0;
   padding: 0 0 0 40px;
-  border-left: 5px solid var(--secondary-color);
-  color: var(--dark-blue);
+  border-left: 5px solid #ff6c27;
+  color: #001062;
   font-size: 1.5rem;
   line-height: 1.7;
 }
 
 .primary-call-out,
 .secondary-call-out {
-  background-color: var(--light-gray);
-  color: var(--text-color);
+  background-color: #eff6f5;
+  color: #333;
   padding: 50px;
   margin: 40px 0;
 }
@@ -334,9 +335,8 @@ blockquote {
   margin-right: calc(50% - 50vw);
 }
 
-
 .header-ribbon {
-  background-color: var(--primary-color);
+  background-color: #1a1c40;
   text-align: left;
   padding: 20px 0;
   position: relative;
@@ -366,15 +366,15 @@ blockquote {
   margin-left: auto;
   margin-right: auto;
   text-align: left;
-  color: var(--white-color) !important;
-  font-family: neulis-neue, var(--font-family) !important;
+  color: #fff !important;
+  font-family: neulis-neue, poppins, sans-serif !important;
   font-size: 3.5em;
   position: relative;
   z-index: 2;
 }
 
 h1 novi-content-wrapper {
-  margin-right: 35%;
+margin-right: 35%;
 }
 
 /* Media query for mobile screens */
@@ -382,7 +382,7 @@ h1 novi-content-wrapper {
   .header-ribbon::after {
     display: none;
   }
-
+  
   .header-ribbon h1 {
     max-width: 100%;
     margin: 50px 0; /* Reduced vertical spacing for mobile */
@@ -393,7 +393,6 @@ h1 novi-content-wrapper {
 .header-ribbon h2 {
   display: none;
 }
-
 .c-nav-navigation__img {
   width: 130px;
   height: auto;
@@ -412,47 +411,47 @@ h1 novi-content-wrapper {
 }
 
 .well.box {
-  background-color: var(--white-color) !important;
+  background-color: #fff !important;
   border-radius: 8px;
   border-style: none;
 }
 
 .form-control {
   border-radius: 4px;
-  border: solid 1px var(--input-border) !important;
+  border: solid 1px #0D2894 !important;
   padding: 20px;
   margin: 0;
 }
 
 label {
-  color: var(--dark-blue) !important;
-  font-family: var(--font-family);
+  color: #000B41 !important;
+  font-family: Poppins;
   font-size: 14px;
   font-weight: 600;
   line-height: 100%;
 }
 
 .control-label.required::after {
-  color: var(--secondary-color) !important;
+  color: #FF6C27 !important;
 }
 
 .btn-long {
   padding: 15px 30px;
   border-radius: 8px;
-  background-color: var(--background-color);
-  color: var(--secondary-color);
+  background-color: #F1F1F1;
+  color: #FF6C27;
   border: none;
   font-size: 16px;
 }
 
 .btn-long:hover {
-  background-color: var(--secondary-color);
-  color: var(--white-color);
+  background-color: #FF6C27;
+  color: #fff;
 }
 
 .navbar-nav > li > a {
-  font: normal 1em var(--font-family);
-  color: var(--primary-color);
+  font: normal 1em Poppins, sans-serif;
+  color: #1a1c40;
 }
 
 /* Base grid container styles */
@@ -503,26 +502,26 @@ label {
 /* Grid item styles */
 .grid-item {
   padding: 20px;
-  background-color: var(--light-gray);
+  background-color: var(--item-bg, #EFF6F5);
   border-radius: 8px;
 }
 
 /* Background color variants - container level */
 .bg-white .grid-item {
-  --item-bg: var(--white-color);
+  --item-bg: #fff;
 }
 
 .bg-light .grid-item {
-  --item-bg: var(--light-gray);
+  --item-bg: #EFF6F5;
 }
 
 /* Background color variants - individual item level */
 .grid-item.bg-white {
-  --item-bg: var(--white-color);
+  --item-bg: #fff;
 }
 
 .grid-item.bg-light {
-  --item-bg: var(--light-gray);
+  --item-bg: #EFF6F5;
 }
 
 /* Typography inside grid items */
@@ -551,8 +550,8 @@ ol {
 @media (min-width: 992px) {
   .navbar-nav > li > .dropdown-menu {
     border-radius: 0;
-    border-top: 5px solid var(--secondary-color);
-    background: var(--light-gray);
+    border-top: 5px solid #FF6C27;
+    background: #EFF6F5;
     box-shadow: 6px 6px 7px -5px rgba(0, 0, 0, 0.2);
   }
 
@@ -565,11 +564,11 @@ ol {
   .level-7 > li:hover,
   .level-8 > li:hover,
   .level-9 > li:hover {
-    background: var(--secondary-color) !important;
+    background: #FF6C27 !important;
   }
 
   .navbar-nav > li > .dropdown-menu > li > a:hover {
-    color: var(--white-color) !important;
+    color: #fff !important;
   }
 }
 
@@ -577,7 +576,7 @@ ol {
   position: absolute;
   bottom: 0;
   width: 100%;
-  background: var(--primary-color);
+  background: #181D41;
 }
 
 .c-member-badge__name {
@@ -586,11 +585,11 @@ ol {
 
 .member-compass-container .c-member-compass-nav__item.active,
 .member-compass-container .c-member-compass-nav__item.active a:hover {
-  background-color: var(--primary-color);
+  background-color: #181D41;
 }
 
 .primary-call-out a {
-  color: var(--tertiary-color);
+  color: #00b8c3;
   text-decoration: underline;
 }
 
@@ -601,18 +600,18 @@ ol {
 .c-article-list__description,
 .c-article-list__posted-by,
 .c-article-list__date {
-  font: normal 0.9em var(--font-family);
+  font: normal 0.9em Poppins, sans-serif;
   line-height: 1.3;
   font-weight: 400;
-  color: var(--text-color);
+  color: #333;
   text-transform: none;
   letter-spacing: 0;
   text-align: left;
 }
 
 .c-article-list-full-width__title {
-  font: 500 1.5em var(--font-family);
-  color: var(--dark-blue);
+  font: 500 1.5em Poppins, sans-serif;
+  color: #001062;
   line-height: 1.3;
   display: block;
   margin-bottom: 10px;
@@ -631,7 +630,7 @@ ol {
   display: inline-block;
   width: 100%;
   margin: 40px 0 50px;
-  border-top: 1px solid var(--border-gray);
+  border-top: 1px solid #ADAFAE;
 }
 
 .c-article-list__hr--bottom {
@@ -639,7 +638,7 @@ ol {
 }
 
 .c-article-list__read-more {
-  color: var(--tertiary-color);
+  color: #00B8C3;
   font-weight: 500;
   font-style: italic;
   text-decoration: underline;
@@ -647,7 +646,7 @@ ol {
 
 .c-article-list-full-width__category,
 .categories .separator {
-  color: var(--secondary-color);
+  color: #FF6C27;
 }
 
 .o-filter-bar__quick-search #search-go {
@@ -655,19 +654,18 @@ ol {
   width: 34px;
   height: 34px;
   padding: 6px 8px;
-  background: var(--background-color);
-  color: #264653; /* No variable defined for this */
-  border: 1px solid var(--background-color);
+  background: #f8f8f8;
+  color: #264653;
+  border: 1px solid #f8f8f8;
 }
 
 .o-filter-bar__quick-search #search-go:active,
 .o-filter-bar__quick-search #search-go:focus,
 .o-filter-bar__quick-search #search-go:hover {
-  border-color: var(--secondary-color);
-  color: var(--white-color);
-  background: var(--secondary-color);
+  border-color: #FF6C27;
+  color: #fff;
+  background: #FF6C27;
 }
-
 .body-content.c-body-content__.c-body-content__blog > div.section:first-child {
   display: none;
 }
@@ -686,7 +684,7 @@ ol {
 .novi-accordion .panel-title {
   font-size: 24px;
   font-weight: bold;
-  color: var(--text-color);
+  color: #333;
   position: relative;
   margin: 0;
 }
@@ -701,7 +699,7 @@ ol {
 
 /* Style the hover effect with #FF6C27 color */
 .novi-accordion .panel-heading:hover .panel-title a {
-  color: var(--secondary-color);
+  color: #FF6C27;
   transition: color 0.3s ease;
 }
 
@@ -737,6 +735,8 @@ ol {
   padding: 15px 20px;
 }
 
+
+/* home hero styles */
 
 /* home hero styles */
 #top-featured-carousel {
