--- a/asap-custom-styles.css
+++ b/asap-custom-styles.css
@@ -758,11 +758,13 @@ ol {
     .event-info {
       background-color: var(--primary-color);
       right: auto;
-      width: 30%;
+      top: auto;
+      width: 33%;
       min-width: 30%;
       height: auto;
       bottom: 4rem;
       border-radius: 8px;
+      justify-content: flex-end;
 
       .date {
         font-size: 16px;
