--- a/asap-custom-styles.css
+++ b/asap-custom-styles.css
@@ -147,11 +147,11 @@ div.c-nav-centered__search > div {
 
 #search-panel {
   background: var(--white-color);
+  border: solid 1px var(--input-border) !important;
+  padding: 20px;
+  margin: 0;
 }
 
-#search-panel .form-group input.form-control.search-text {
-  border-style: none;
-}
 
 /* Logo styling */
 .c-nav-centered__logo {
@@ -425,11 +425,15 @@ h1 novi-content-wrapper {
   border-style: none;
 }
 
-.form-control {
+.form-control:not(.search-text) {
   border-radius: 4px;
   border: solid 1px var(--input-border) !important;
   padding: 20px;
   margin: 0;
+}
+
+#search-panel .form-group input.form-control.search-text {
+  border-style: none;
 }
 
 label {
