update footer styles mobile

--- a/asap-custom-styles.css
+++ b/asap-custom-styles.css
@@ -202,8 +202,14 @@ div.c-nav-centered__search > div {
     text-align: left;
     font-size: 16px;
     font-weight: 400;
+    a {
+      color: var(--tertiary-color);
+    }
   }
-  
+  a {
+    font-weight: 400;
+    font-size: 16px;
+  }
   h4 {
     margin-top: 0;
     font-size: 20px;
@@ -214,13 +220,16 @@ div.c-nav-centered__search > div {
     padding-left: 0;
     margin: 0;
     a {
-      font-weight: 400;
-      font-size: 16px;
+      color: var(--white-color);
     }
   }
 
   .c-footer__top {
     display: flex;
+    flex-direction: column;
+    @media (min-width: 768px) {
+      flex-direction: row;
+    }
     .o-column {
       float: none;
       padding: 0;
@@ -262,6 +271,8 @@ div.c-nav-centered__search > div {
 
   .c-footer__bottom {
     border-top-color: var(--white-color);
+    padding-top: 3rem;
+
     .g-footer__novi.c-footer__bottom-left,
     .g-footer__affiliates.c-footer__bottom-right {
       display: none;
