--- a/asap-custom-styles.css
+++ b/asap-custom-styles.css
@@ -94,6 +94,15 @@ h6::before {
   p {
     color: var(--primary-color);
   }
+
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    margin-bottom: 20px;
+  }
 }
 
 /* Links */
@@ -235,8 +244,11 @@ div.c-nav-centered__search > div {
       padding: 0;
     }
     .c-footer__top-left {
-      width: 33%;
       text-align: left;
+      width: 100%;
+      @media (min-width: 768px) {
+        width: 33%;
+      }
 
       .c-footer__logo-wrapper img {
         content: url("https://assets-staging.noviams.com/novi-file-uploads/asap/structure/asap_logo_white_crop.svg");
@@ -260,11 +272,18 @@ div.c-nav-centered__search > div {
       }
     }
     .c-footer__top-right {
-      width: 75%;
+      width: 100%;
+      @media (min-width: 768px) {
+        width: 75%;
+      }
     }
     .grid-container {
       .grid-item {
         background: transparent;
+        padding: 0;
+        p {
+          margin-bottom: 0.5rem !important;
+        }
       }
     }
   }
@@ -272,6 +291,12 @@ div.c-nav-centered__search > div {
   .c-footer__bottom {
     border-top-color: var(--white-color);
     padding-top: 3rem;
+
+    p {
+      a {
+        color: var(--white-color);
+      }
+    }
 
     .g-footer__novi.c-footer__bottom-left,
     .g-footer__affiliates.c-footer__bottom-right {
@@ -307,8 +332,6 @@ div.c-nav-centered__search > div {
   color: var(--white-color);
 }
 
-
-
 /* Button styles - consolidated */
 .btn.btn-primary,
 .c-event-date-stub__btn,
@@ -328,6 +351,7 @@ div.c-nav-centered__search > div {
   border: 2px solid var(--primary-color);
 }
 
+.body-content .main-event .event-info .btn.btn.btn-transparent,
 .btn.btn-transparent,
 .btn.btn-secondary {
   padding: 15px 30px;
@@ -350,13 +374,38 @@ div.c-nav-centered__search > div {
 
 /* Events section */
 .events.hidden-xs.hidden-sm {
-  background-color: var(--light-gray);
+  /* background-color: var(--light-gray); */
   padding: 20px;
 }
 
 .events-nav h2 {
   text-align: left;
   color: var(--primary-color);
+}
+#events .events-nav h2,
+.events .events-nav h2 {
+  font-weight: 600;
+  color: var(--primary-color);
+}
+
+.event-table {
+  .c-event-date-stub__wrapper {
+    background-color: var(--light-gray);
+    .date-stub,
+    .date-stub strong,
+    .c-event-date-stub__separator--slash {
+      font-size: 16px;
+      color: var(--secondary-color);
+    }
+  }
+
+  .c-event-date-stub__event-wrapper {
+    .c-event-date-stub__event-name {
+      color: var(--dark-blue);
+      font-size: 24px;
+      font-weight: 700;
+    }
+  }
 }
 
 /* Event date styling */
@@ -396,12 +445,6 @@ div.c-nav-centered__search > div {
 .c-event-date-stub__event-wrapper {
   padding-left: 20px;
   padding-top: 0;
-}
-
-.c-event-date-stub__event-name {
-  color: var(--dark-blue);
-  font-size: 24px;
-  font-weight: 700;
 }
 
 .c-event-date-stub__event-wrapper a {
@@ -639,7 +682,7 @@ label {
 
 /* Grid item styles */
 .grid-item {
-  padding: 20px;
+  padding: 0px;
   background-color: var(--light-gray);
   border-radius: 8px;
 }
@@ -902,5 +945,9 @@ ol {
         text-transform: uppercase;
       }
     }
+  }
+
+  .slick-dots {
+    display: none;
   }
 }
