--- a/asap-custom-styles.css
+++ b/asap-custom-styles.css
@@ -388,22 +388,38 @@ div.c-nav-centered__search > div {
   color: var(--primary-color);
 }
 
-.event-table {
-  .c-event-date-stub__wrapper {
-    background-color: var(--light-gray);
-    .date-stub,
-    .date-stub strong,
-    .c-event-date-stub__separator--slash {
-      font-size: 16px;
-      color: var(--secondary-color);
+.col-md-4.event {
+  .event-table {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    .c-event-date-stub__wrapper {
+      background-color: var(--light-gray);
+      .date-stub,
+      .date-stub strong,
+      .c-event-date-stub__separator--slash {
+        font-size: 16px;
+        color: var(--secondary-color);
+      }
     }
-  }
 
-  .c-event-date-stub__event-wrapper {
-    .c-event-date-stub__event-name {
-      color: var(--dark-blue);
-      font-size: 24px;
-      font-weight: 700;
+    .c-event-date-stub__event-wrapper {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      .c-event-date-stub__event-name {
+        color: var(--dark-blue) !important;
+        font-size: 24px;
+        font-weight: 700;
+      }
+      a {
+        .c-event-date-stub__btn {
+          float: none;
+          top: auto;
+          right: auto;
+          position: relative;
+        }
+      }
     }
   }
 }
@@ -948,6 +964,6 @@ ol {
   }
 
   .slick-dots {
-    display: none;
+    display: none !important;
   }
 }
