--- a/asap-custom-styles.css
+++ b/asap-custom-styles.css
@@ -708,7 +708,7 @@ label {
 /* Grid item styles */
 .grid-item {
   padding: 0px;
-  background-color: var(--light-gray);
+  /* background-color: var(--light-gray); */
   border-radius: 8px;
 }
 
@@ -986,4 +986,50 @@ ol {
     padding: 0;
 
   }
+}
+
+/* .container {
+  max-width: 1170px;
+  margin: 0 auto;
+  padding: 6rem 0;
+} */
+
+.title-copy-container {
+  background-color: var(--light-gray);
+  width: 100vw;
+  margin-left: calc(50% - 50vw);
+  margin-right: calc(50% - 50vw);
+
+  & + .title-copy-container .container{
+    border-top: 2px solid #00B8C34D;
+  }
+  .grid-item * {
+    color: var(--dark-blue);
+    margin: 0 0 1rem;
+    line-height: 1.5;
+  }
+  h3 {
+    font-size: 40px;
+  }
+  p {
+    font-size: 1em;
+  }
+  .grid-item:nth-child(1) {
+    border-bottom: solid var(--tertiary-color) 5px;
+    border-radius: 0;
+    @media (min-width: 768px) {
+      border-bottom: none;
+      border-right: solid var(--tertiary-color) 5px;
+    }
+  }
+
+  .grid-item:nth-child(2) {
+    font-size: 1.25em;
+    padding-left: 0;
+    @media (min-width: 768px) {
+      padding-left: 2rem;
+    }
+  }
+  
+
 }
