--- a/asap-custom-styles.css
+++ b/asap-custom-styles.css
@@ -1002,6 +1002,14 @@ ol {
 
   & + .title-copy-container .container{
     border-top: 2px solid #00B8C34D;
+    &::before,
+    &::after {
+      display: none;
+    }
+  }
+
+  .grid-container {
+    padding: 6rem 0;
   }
   .grid-item * {
     color: var(--dark-blue);
