--- a/asap-custom-styles.css
+++ b/asap-custom-styles.css
@@ -1002,6 +1002,9 @@ ol {
 
   & + .title-copy-container .container{
     border-top: 2px solid #00B8C34D;
+  }
+
+  .container {
     &::before,
     &::after {
       display: none;
